Add delete version endpoint (#19)
